# InheritX

./: CI_FIX_DOCUMENTATION.md  commit_debug.txt  commit_last.txt  commit_out.txt  debug_git.txt  git_status_after.txt  last_commit_reconcile.txt  next.config.ts  package-lock.json  show_ref.txt
backend/: Cargo.toml  app_check_results.txt  app_check_results_utf8.txt  check_results.txt  check_results_utf8.txt  check_results_v2.txt  check_results_v2_utf8.txt  end_of_app.txt  env.example  fix_migrations.bat  fmt_check.txt  test_results.txt  test_results_utf8.txt  test_results_v3.txt  test_results_v3_utf8.txt  test_results_v4.txt  test_results_v4_utf8.txt
backend/docs/: EMERGENCY_ACCESS_NOTIFICATIONS.md  EVENTS.md  IMPLEMENTATION_SUMMARY_DOWNLOAD_API.md  LEGACY_CONTENT_UPLOAD.md  LEGAL_DOCUMENT_DOWNLOAD_API.md  LEGAL_WILL_AUDIT_LOGS.md
backend/migrations/: 20260219165643_init.sql  20260220034517_add_plan_fields.sql  20260221120000_add_plans_and_logs.sql  20260221151200_add_notifications_and_action_logs.sql  20260222000000_add_nonce_to_users.sql  20260223000000_add_claim_plan_unique_constraint.sql  20260224153500_add_nonces.sql  20260225_add_price_feeds.sql  20260226000000_add_lending_events.sql  20260226140000_create_user_2fa.sql  20260324120000_add_emergency_access_tracking.sql  20260324160000_extend_action_logs.sql  20260324170000_add_emergency_contacts.sql  20260324173000_add_emergency_access_audit_logs.sql  20260324180000_add_emergency_access_risk_alerts.sql  20260325100000_add_pools_for_stress_testing.sql  20260325103000_add_governance_tables.sql  20260325190000_add_emergency_access_sessions.sql  20260325200000_add_will_documents_and_signatures.sql  20260326000000_add_document_encryption_and_backups.sql  20260326000000_add_will_document_status.sql  20260326000000_add_will_witnesses.sql  (+7 more)
(+268 files in other folders)
